app/base/traefik/traefik-dashboard-ingressroute.yaml
# app/base/traefik/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`) || (Host(`admin.sportdeets.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`)))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
